全局替换敏感字

--- a/1.0 2/GQZhiBo/GQZhiBo/Class/本地h5文件/jshtml-App/chengji-list.html
+++ b/1.0 2/GQZhiBo/GQZhiBo/Class/本地h5文件/jshtml-App/chengji-list.html
@@ -56,7 +56,7 @@
         <tbody>   
 	       {{if playYa.length==3}}
 			<tr>
-			<td> 亚盘</td>
+			<td> 亚指</td>
 			<td><span>{{playYa[0].choicename}} </span> <span>{{playYa[1].choicename}}</span> <span>{{playYa[2].choicename}}</span></td>
 			<td><span>{{playYa[0].recommendCount}} </span> <span>{{playYa[1].recommendCount}}</span> <span>{{playYa[2].recommendCount}}</span></td>
 			<td><span>{{playYa[0].winRate}}</span> <span>{{playYa[1].winRate}} </span> <span>{{playYa[2].winRate}} </span></td>
@@ -69,7 +69,7 @@
 			{{/if}} 
 	       {{if playYa.length==2}}
 			<tr>
-			<td> 亚盘</td> 
+			<td> 亚指</td> 
 			<td><span>{{playYa[0].choicename}} </span> <span>{{playYa[1].choicename}}</span> </td>
 			<td><span>{{playYa[0].recommendCount}} </span> <span>{{playYa[1].recommendCount}}</span></td>
 			<td><span>{{playYa[0].winRate}}</span> <span>{{playYa[1].winRate}} </span> </td>
@@ -81,7 +81,7 @@
 			{{/if}} 
 	       {{if playYa.length==1}}
 			<tr>
-			<td> 亚盘</td> 
+			<td> 亚指</td> 
 			<td><span>{{playYa[0].choicename}} </span> </td>
 			<td><span>{{playYa[0].recommendCount}} </span></td>
 			<td><span>{{playYa[0].winRate}}</span>  </td>
@@ -91,7 +91,7 @@
 		  
 		 {{if playDx.length==3}}
 			<tr>
-			<td> 大小球</td>
+			<td> 进球数</td>
 			<td><span>{{playDx[0].choicename}} </span> <span>{{playDx[1].choicename}}</span> <span>{{playDx[2].choicename}}</span></td>
 			<td><span>{{playDx[0].recommendCount}} </span> <span>{{playDx[1].recommendCount}}</span> <span>{{playDx[2].recommendCount}}</span></td>
 			<td><span>{{playDx[0].winRate}}</span> <span>{{playDx[1].winRate}} </span> <span>{{playDx[2].winRate}} </span></td>
@@ -104,7 +104,7 @@
 			{{/if}} 
 	       {{if playDx.length==2}}
 			<tr>
-			<td> 大小球</td> 
+			<td> 进球数</td> 
 			<td><span>{{playDx[0].choicename}} </span> <span>{{playDx[1].choicename}}</span> </td>
 			<td><span>{{playDx[0].recommendCount}} </span> <span>{{playDx[1].recommendCount}}</span></td>
 			<td><span>{{playDx[0].winRate}}</span> <span>{{playDx[1].winRate}} </span> </td>
@@ -116,7 +116,7 @@
 			{{/if}} 
 	       {{if playDx.length==1}}
 			<tr>
-			<td> 大小球</td> 
+			<td> 进球数</td> 
 			<td><span>{{playDx[0].choicename}} </span> </td>
 			<td><span>{{playDx[0].recommendCount}} </span></td>
 			<td><span>{{playDx[0].winRate}}</span>  </td>
@@ -185,7 +185,7 @@
        <div class="marktit"><span> </span>  <i>让球盘口统计</i> </div> 
         <table class="tablecj ya" cellspacing="0" cellpadding="0"> 
         <thead>
-        <th>亚盘 </th>
+        <th>亚指 </th>
         <th width="50">场次</th>
         <th width="90">胜率</th>
         <th width="40">盈利率</th> 
@@ -208,7 +208,7 @@
         </tbody> 
         </table>   
         
-    <div class="marktit"><span> </span>  <i>大小球盘口统计 </i> </div>
+    <div class="marktit"><span> </span>  <i>进球数盘口统计 </i> </div>
  
           <table class="tablecj dx" cellspacing="0" cellpadding="0"> 
         <thead>
